# pytest-send-email

./: README.md  pyproject.toml  pytest.ini
tests/: test_ini.py
